# Inkspire

./: .clangd  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  app  build.bat  utility.sh  vcpkg.json
app.dSYM/Contents/Resources/DWARF/: app
app.dSYM/Contents/Resources/Relocations/x86_64/: app.yml
include/inkspire/: app.hpp  canvas.hpp
src/: CMakeLists.txt  app.cpp  canvas.cpp  inkspire.cpp  main.cpp
tests/: CMakeLists.txt  test_dud.cpp
